Iterative policy evaluation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["Axel COCAT", "Yohann JERRAIN"]
 edition = "2018"
 
 [dependencies]
-ndarray = "*"
+ndarray = "0.13.0"
+ndarray-rand = "0.11.0"
